setup ssl certs

--- a/templates/haproxy.j2
+++ b/templates/haproxy.j2
@@ -21,7 +21,7 @@ defaults
 
 frontend http-80andhttps-443
   bind *:80
-  #bind *:443 ssl crt /path/to/proxy/sslcert/cert.pem apln h2,http/1.1
+  bind *:443 ssl crt /etc/pki/tls/certs/stockcheckerapp.com.pem alpn h2,http/1.1
   timeout client 60s
   mode http
   use_backend  app1_servers
