--- a/templates/haproxy.j2
+++ b/templates/haproxy.j2
@@ -1,6 +1,8 @@
 global
     maxconn 50000
     log /dev/log local0
+    chroot /var/lib/haproxy
+   
     user haproxy
     group haproxy
     #stats socket /run/haproxy/admin.sock user haproxy group haproxy mode 660 level admin
