--- a/templates/haproxy.j2
+++ b/templates/haproxy.j2
@@ -18,6 +18,14 @@ defaults
     mode http
     option httplog
     maxconn 3000
+    errorfile 400 /etc/haproxy/errors-custom/400.http
+    errorfile 403 /etc/haproxy/errors-custom/403.http
+    errorfile 404 /etc/haproxy/errors-custom/404.http
+    errorfile 408 /etc/haproxy/errors-custom/408.http
+    errorfile 500 /etc/haproxy/errors-custom/500.http
+    errorfile 502 /etc/haproxy/errors-custom/502.http
+    errorfile 503 /etc/haproxy/errors-custom/503.http
+    errorfile 504 /etc/haproxy/errors-custom/504.http
 
 frontend stats
     bind *:8404
